virt-manager: Fix issues with ellipsizing on recent gtk

--- a/ui/clone.ui
+++ b/ui/clone.ui
@@ -926,6 +926,7 @@ like change passwords or static IPs, please see the virt-sysprep(1) tool.&lt;/sp
                         <property name="label">orig-path</property>
                         <property name="ellipsize">start</property>
                         <property name="width_chars">25</property>
+                        <property name="max_width_chars">25</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
