--- a/ui/connect.ui
+++ b/ui/connect.ui
@@ -150,6 +150,8 @@
                 <property name="xalign">0</property>
                 <property name="label">uri</property>
                 <property name="ellipsize">end</property>
+                <property name="width_chars">22</property>
+                <property name="max_width_chars">22</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
