--- a/ui/create.ui
+++ b/ui/create.ui
@@ -388,6 +388,8 @@
                                     <property name="xalign">0</property>
                                     <property name="label">conn label</property>
                                     <property name="ellipsize">end</property>
+                                    <property name="width_chars">25</property>
+                                    <property name="max_width_chars">25</property>
                                   </object>
                                   <packing>
                                     <property name="expand">True</property>
@@ -1261,7 +1263,6 @@ User shouldn't see this.</property>
                                                 <property name="label" translatable="yes">Kerne_l args:</property>
                                                 <property name="use_underline">True</property>
                                                 <property name="mnemonic_widget">config-kernel-args</property>
-                                                <property name="ellipsize">end</property>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">0</property>
@@ -2087,7 +2088,10 @@ is not yet supported.&lt;/small&gt;</property>
                                         <property name="can_focus">False</property>
                                         <property name="xalign">0</property>
                                         <property name="label">label</property>
+                                        <property name="wrap">True</property>
                                         <property name="ellipsize">end</property>
+                                        <property name="width_chars">31</property>
+                                        <property name="max_width_chars">31</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">1</property>
