details: Put tabs on left, easier to navigate with glade

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -658,6 +658,7 @@
                       <object class="GtkNotebook" id="hw-panel">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="tab_pos">left</property>
                         <property name="show_border">False</property>
                         <child>
                           <object class="GtkVBox" id="vbox6">
