--- a/ui/fsdetails.ui
+++ b/ui/fsdetails.ui
@@ -238,7 +238,7 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="xalign">0</property>
-        <property name="label" translatable="yes">_Mode:</property>
+        <property name="label" translatable="yes">M_ode:</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">fs-mode-combo</property>
       </object>
