--- a/ui/fsdetails.ui
+++ b/ui/fsdetails.ui
@@ -220,7 +220,7 @@
       </packing>
     </child>
     <child>
-      <object class="GtkLabel" id="label18">
+      <object class="GtkLabel" id="fs-type-title">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="xalign">0</property>
