details: add missing mnemonics in cpu UI tab
Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -1974,7 +1974,9 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <property name="xalign">1</property>
-                                                <property name="label" translatable="yes">Maximum allocation:</property>
+                                                <property name="label" translatable="yes">Ma_ximum allocation:</property>
+                                                <property name="use_underline">True</property>
+                                                <property name="mnemonic_widget">config-maxvcpus</property>
                                               </object>
                                               <packing>
                                                 <property name="top_attach">2</property>
@@ -1990,6 +1992,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                                 <property name="xalign">1</property>
                                                 <property name="label" translatable="yes">Current a_llocation:</property>
                                                 <property name="use_underline">True</property>
+                                                <property name="mnemonic_widget">config-vcpus</property>
                                               </object>
                                               <packing>
                                                 <property name="top_attach">1</property>
