panic notifier: remove shortcuts in details.ui
We could not modify them in panic notifier page,
so remove them.

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -5872,8 +5872,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                         <property name="can_focus">False</property>
                                         <property name="xalign">0</property>
                                         <property name="ypad">3</property>
-                                        <property name="label" translatable="yes">Address T_ype:</property>
-                                        <property name="use_underline">True</property>
+                                        <property name="label" translatable="yes">Address Type:</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">0</property>
@@ -5885,8 +5884,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">_IO Base:</property>
-                                        <property name="use_underline">True</property>
+                                        <property name="label" translatable="yes">IO Base:</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">0</property>
