--- a/ui/details.ui
+++ b/ui/details.ui
@@ -5083,8 +5083,9 @@ if you know what you are doing.&lt;/small&gt;</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
                                             <property name="xalign">1</property>
-                                            <property name="label" translatable="yes">A_ction:</property>
+                                            <property name="label" translatable="yes">Ac_tion:</property>
                                             <property name="use_underline">True</property>
+                                            <property name="mnemonic_widget">combobox-entry14</property>
                                           </object>
                                           <packing>
                                             <property name="top_attach">1</property>
@@ -5100,6 +5101,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                             <property name="xalign">1</property>
                                             <property name="label" translatable="yes">M_odel:</property>
                                             <property name="use_underline">True</property>
+                                            <property name="mnemonic_widget">combobox-entry15</property>
                                           </object>
                                           <packing>
                                             <property name="x_options">GTK_FILL</property>
