details: add shortkey for controller model
shortkey 'o' for 'Model'.

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -5246,7 +5246,9 @@ if you know what you are doing.&lt;/small&gt;</property>
                                       <object class="GtkLabel" id="mlabel48">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
-                                        <property name="label" translatable="yes">Model:</property>
+                                        <property name="label" translatable="yes">M_odel:</property>
+                                        <property name="use_underline">True</property>
+                                        <property name="mnemonic_widget">combobox-entry16</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">0</property>
