video: add missing mnemonics in details UI
Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -4980,6 +4980,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                             <property name="xalign">1</property>
                                             <property name="label" translatable="yes">M_odel:</property>
                                             <property name="use_underline">True</property>
+                                            <property name="mnemonic_widget">combobox-entry13</property>
                                           </object>
                                           <packing>
                                             <property name="x_options">GTK_FILL</property>
