--- a/ui/details.ui
+++ b/ui/details.ui
@@ -4549,6 +4549,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                             <property name="can_focus">False</property>
                                             <property name="xalign">0</property>
                                             <property name="label" translatable="yes">Device m_odel:</property>
+                                            <property name="mnemonic_widget">combobox-entry12</property>
                                             <property name="use_underline">True</property>
                                           </object>
                                           <packing>
