--- a/ui/details.ui
+++ b/ui/details.ui
@@ -5380,6 +5380,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                             <property name="xalign">0</property>
                                             <property name="label" translatable="yes">M_ode:</property>
                                             <property name="use_underline">True</property>
+                                            <property name="mnemonic_widget">combobox-entry17</property>
                                           </object>
                                           <packing>
                                             <property name="x_options">GTK_FILL</property>
