Redirect device: remove underline property of 'Type' in details UI
redir-type is a label.

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/ui/details.ui
+++ b/ui/details.ui
@@ -5465,8 +5465,7 @@ if you know what you are doing.&lt;/small&gt;</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">T_ype:</property>
-                                        <property name="use_underline">True</property>
+                                        <property name="label" translatable="yes">Type:</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">0</property>
